2016-08-18  Alan Modra  <amodra@gmail.com>

	PR rtl-optimization/72771
	* reload.c (find_reloads): Don't assume that a subreg mem is OK
	when find_reloads_toplev returns address_reloaded==-1.
	(alternative_allows_const_pool_ref): Update comment.

2015-08-17  Alan Hayward <alan.hayward@arm.com>

	PR tree-optimization/71752
	* tree-vect-loop.c (vectorizable_reduction): Keep SLP operand ordering.
	* tree-vect-slp.c (vect_get_slp_defs): Handle null operands.

2016-08-17  Jakub Jelinek  <jakub@redhat.com>

	* gimple-fold.c (gimple_fold_call): Use gimple_call_noreturn_p
	instead of testing ECF_NORETURN bit in gimple_call_flags.
	* tree-cfg.c (make_edges_bb, execute_fixup_cfg): Likewise.
	* predict.c (tree_bb_level_predictions): Likewise.
	* gimple-low.c (gimple_stmt_may_fallthru): Likewise.

	PR middle-end/77259
	* tree-ssa-pre.c (eliminate_dom_walker::before_dom_children): If
	turning a call into __builtin_unreachable-like noreturn call, adjust
	gimple_call_set_fntype.
	* tree-cfgcleanup.c (fixup_noreturn_call): Remove lhs also if
	gimple_call_fntype has void return type.

2016-08-17  Chung-Lin Tang  <cltang@codesourcery.com>

	* omp-low.c (lower_oacc_reductions): Adjust variable lookup to use
	maybe_lookup_decl, to handle nested acc loop directives.

2016-08-17  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/76490
	* tree-vrp.c (update_value_range): Preserve overflow infinities
	when intersecting with ranges from get_range_info.
	(operand_less_p): Handle overflow infinities correctly.
	(value_range_constant_singleton): Use vrp_operand_equal_p
	to handle overflow max/min correctly.
	(vrp_valueize): Likewise.
	(union_ranges): Likewise.
	(intersect_ranges): Likewise.
	(vrp_visit_phi_node): Improve iteration limitation to only
	apply when we'll possibly re-visit the PHI via a changed argument
	on the backedge.

2016-08-17  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* config/arm/t-aprofile (MULTILIB_EXCEPTIONS): Rewrite into ...